2014-05-28 Fixed issue with MathJax in Multiplegap addon
2014-05-26 Added command isAttempted to Text Selection addon
2014-05-26 Fixed issue with Video addon on IE
2014-05-23 Added isAttempted method to Multiplegap module
2014-05-23 Fixed wrong positioning of Glossary module in iFrame
2014-05-22 Fixed issue with states in Table addon
2014-05-22 Fixed issue with Slider not working on Firefox
2014-05-22 Fixed issue with doubled 3D Viewer addon on devices with Android 4.2.2
2014-05-22 Added command reset to SourceList addon
2014-05-21 Added possibility to style correct/wrong answers to Coloring module
2014-05-20 Fixed issue with states in Line Number addon
2014-05-16 Removed navigation pages for single page
2014-05-16 Fixed issues with states and reset in Done addon
2014-05-16 Fixed issue with Graph module on page change
2014-05-16 New Gap type: Math in Text module
2014-05-15 Added commands hide and show to Done addon
2014-05-12 Added commands setColor(color), setThickness(thickness), setEraserOn() and setEraserThickness(thickness) to Drawing addon
2014-05-11 Added isAttempted, setAttempted, isAllOK to Plot addon
2014-05-10 Choice returns max score on All ok event.
2014-05-08 New commands in Points and Lines addon: markAsCorrect, markAsWrong, markAsNeutral, isConnected, isEmpty
2014-05-08 Fixed problem with Coloring module not displaying coordinates in editor
2014-05-08 Fixed problem with check counter in report after reopening page
2014-05-07 Setting visibility of Feedback module on reset
2014-05-07 Fixed issue with True/False addon on Firefox mobile browser
2014-05-06 Added show/hide methods to Feedback addon
2014-05-06 Fixed problem with reading page name with special characters
2014-05-06 Fixed problem with dragging image source and source list while in editor mode
2014-05-05 Added ability to define constant letters in Crossword addon
2014-04-30 Fixed issue with custom events improper behaviour in Advanced Connector