@@ -1,3 +1,4 @@
+2014-06-06 Added support for touches on Windows 8 Mobile in Slider module
 2014-05-28 Fixed issue with MathJax in Multiplegap addon
 2014-05-26 Added command isAttempted to Text Selection addon
 2014-05-26 Fixed issue with Video addon on IE
